<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/register_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        />

    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_heading_txt"
        android:textColor="@color/black"
        android:layout_below="@id/register_activity_toolbar"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

  <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/reg_display_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:layout_below="@id/create_account_text"
      android:hint="@string/reg_display_name_hint"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/reg_display_name"
        android:hint="@string/reg_mail_hint"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textEmailAddress"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/reg_email"
        android:hint="@string/reg_pass_hint"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/create_account_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="fill_horizontal"
        android:text="@string/reg_create_account_txt"
        android:padding="20dp"
        android:textColor="@color/white"
        android:background="#FF0000"/>


</RelativeLayout>